# build_it

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: release.yml
build_it/: __init__.py  __main__.py
build_it/cli/: __init__.py  main.py
build_it/core/: __init__.py  builder.py  config.py  enums.py  models.py  parser.py
build_it/utils/: __init__.py  constants.py  guards.py  utils.py
scripts/: build_binaries.sh  install.ps1  install.sh
tests/: __init__.py
tests/fixtures/: syntax_a.yaml  syntax_b.yaml  syntax_c.yaml
tests/unit/: test_parser_config.py
